[package]
name = "rustdtp"
version = "0.6.0"
authors = ["WKHAllen <wkhallen@gmail.com>"]
license = "MIT"
description = "Cross-platform networking interfaces for Rust."
repository = "https://github.com/WKHAllen/rustdtp"
homepage = "https://wkhallen.com/dtp/"
keywords = ["socket", "networking", "io", "async"]
include = ["src/**/*", "LICENSE", "README.md"]
edition = "2021"
rust-version = "1.75"

[dependencies]
aes-gcm = "0.10.3"
futures = "0.3"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1" }
