[package]
name = "rustdtp"
version = "0.8.0"
authors = ["WKHAllen <wkhallen@gmail.com>"]
license = "MIT"
description = "Cross-platform networking interfaces for Rust."
repository = "https://github.com/WKHAllen/rustdtp"
homepage = "https://wkhallen.com/dtp/"
keywords = ["socket", "networking", "io", "async"]
categories = ["network-programming", "asynchronous"]
include = ["src/**/*", "LICENSE", "README.md"]
edition = "2021"
rust-version = "1.75"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
futures = "0.3"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
